Fix scrollbar appearing for a small instant

--- a/src/game/global.css
+++ b/src/game/global.css
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+html, body, #root {
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   background: #fefefe;
@@ -88,17 +92,4 @@ body {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -124;
   }
-}
-
-.circular-progress {
-  position: relative;
-  width: 100px;
-  height: 100px;
-  animation: rotate 2s linear infinite both;
-}
-.circular-progress__path {
-  stroke-dasharray: 1, 200;
-  stroke-dashoffset: 0;
-  animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite both;
-  stroke-linecap: round;
 }
